--- a/formulario.html
+++ b/formulario.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="./index.html">Inicio</a></li>
             <li><a href="estrellas.html">Estrellas</a></li>
-            <li><a href="contelaciones.html">Constelación</a></li>
+            <li><a href="constelaciones.html">Constelación</a></li>
             <li><a href="formulario.html">Datos</a></li>
         </ul>
     </nav>
@@ -81,6 +81,3 @@
 
 </body>
 </html>
-
-CSS
-
