--- a/formulario.html
+++ b/formulario.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./style/formulario.css">
 
     <title>TUS DATOS</title>
 </head>
@@ -26,7 +27,9 @@
 
         <form action="">
             <h3>LLENA TUS DATOS</h3>
+            <center>
             <p> Nombre: <input type="text" size="40" placeholder="Escriba su nombre en mayúscula"> </p>
+        </center>
             <p> Sexo:   <input type="radio" name="sexo" value="1" required> Hombre
                         <input type="radio" name="sexo" value="2" > Mujer
                         <input type="radio" name="sexo" value="3"> Prefiero no decirlo       </p>
@@ -42,6 +45,10 @@
             <p>
                 Hora <input type="time" name="" id="">
             </p>
+            <p> correo electronico:
+                <input type="text" name="" id="correo" maxlength="8" minlength="5">   </p>
+                <p> Contraseña:
+                    <input type="text" name="" id="Contraseña" maxlength="8" minlength="5">   </p>
             <p>
                 Elige tu color favorito: <br>
                 <input type="checkbox" name="" id="">Rojo
